fixed overflow on right side

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
  body {
 	width: 100%;
 	height: 100%;
-	padding: 0;
-	margin: 0;
 	background: #660033;
+	overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 /*makes sure this fills the whole page and no unecessary padding on our elements*/
@@ -79,7 +80,7 @@
 	position: absolute;
 	width: 50px;
 	height: 50px;
-	bottom: 5px;
+	bottom: 10px;
 	left: 50%;
 	margin-left: -25px;
 	/*background-image: url("assets/arrow.png");
@@ -90,15 +91,17 @@
 .photo {
 	border-width: 15px;
 	border-style: solid;
+/*	box-shadow: 0 0 10px rgba(0, 0, 0, .8);*/
 	border-color: rgba(0, 0, 0, 0.5);
+	width: 600px;
+  height: auto;
+  position: relative;
+  left: 0%;
 }
 
 .image-wrapper {
-	float: right;
-	width: 100%;
-	height: 100%;
+	left: 60%;
 	position: relative;
-	padding: 30px;
 
 }
 
@@ -109,21 +112,21 @@
 }
 
 #slide1{
+	background: #e63900;
+	
+}
+
+#slide2{
 	background-image: url("slideBackground.jpeg");
 	-webkit-background-size: cover;
 	-o-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	z-index: 9;
-}
-
-#slide2{
-	background: white;
-	
+	z-index: 9;	
 }
 
 #slide3{
-	background-color: orange;
+	background-color: #e63900;
 }
 
 #slide4{
